--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5374,6 +5374,7 @@ Services Area CSS
 .single-services-box {
   position: relative;
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .single-services-box img {
@@ -5385,7 +5386,7 @@ Services Area CSS
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 30px;
+  padding: 15px;
   z-index: 2;
   transition: var(--transition);
 }
@@ -5408,6 +5409,9 @@ Services Area CSS
 
 .single-services-box .content h3 a {
   color: var(--whiteColor);
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
 
 .single-services-box .content h3 a:hover {
@@ -5425,7 +5429,7 @@ Services Area CSS
   font-weight: 700;
   padding-right: 12px;
   position: absolute;
-  left: 30px;
+  /* left: 30px; */
   display: inline-block;
   bottom: 0;
   color: var(--whiteColor);
@@ -5468,6 +5472,7 @@ Services Area CSS
   width: 100%;
   z-index: 1;
   left: 0;
+  border-radius: 15px;
   top: 0;
   background: linear-gradient(to top, rgba(35, 35, 37, 0.9) 0, rgba(35, 35, 37, 0.7) 35%, rgba(22, 22, 23, 0) 60%, rgba(0, 0, 0, 0) 100%);
 }
@@ -15736,18 +15741,20 @@ Modal CSS
 }
 
 .video-background-content {
-  position: relative;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 50px;
   z-index: 2;
 }
 
 .video-background-overlay {
+  background-color: rgba(34, 49, 63, 0.4);
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: black;
-  opacity: 0.5;
   z-index: 1;
 }
 
@@ -15927,4 +15934,46 @@ Modal CSS
 }
 .dropdown-item{
   padding: 8px 10px 10px !important;
+}
+
+.single-works-box,
+.single-works-box img,
+.works-overlay{
+  border-radius: 15px;
+}
+
+
+.testimonial-data img {
+  width: 70px;
+  max-height: 70px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 576px) {
+  .testimonial-data-inner {
+    display: flex;
+    width: 100%;
+    margin-inline: auto;
+    padding: 1em 0;
+    overflow: hidden;
+  }
+  .testimonial-data-item {
+    display: block;
+    margin-right: 0;
+    flex: 0 0 calc(100% / 2);
+  }
+}
+@media screen and (min-width: 768px) {
+  .testimonial-data-item {
+    display: block;
+    margin-right: 0;
+    flex: 0 0 calc(100% / 3);
+  }
+}
+.testimonial-data .card {
+  width: 100%;
+  border: 0;
+  border: 1px solid #ececec;
 }
