--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ Default CSS
   --optionalColor: #6f6f6f;
   --whiteColor: #ffffff;
   --blackColor: #2d2d37;
-  --btn-color : #3e2171;
+  --btn-color: #3e2171;
   --fontSize: 15.5px;
   --transition: .5s;
 }
@@ -5374,6 +5374,7 @@ Services Area CSS
 .single-services-box {
   position: relative;
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .single-services-box img {
@@ -5385,7 +5386,7 @@ Services Area CSS
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 30px;
+  padding: 15px;
   z-index: 2;
   transition: var(--transition);
 }
@@ -5408,6 +5409,9 @@ Services Area CSS
 
 .single-services-box .content h3 a {
   color: var(--whiteColor);
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
 
 .single-services-box .content h3 a:hover {
@@ -5425,7 +5429,7 @@ Services Area CSS
   font-weight: 700;
   padding-right: 12px;
   position: absolute;
-  left: 30px;
+  /* left: 30px; */
   display: inline-block;
   bottom: 0;
   color: var(--whiteColor);
@@ -5468,6 +5472,7 @@ Services Area CSS
   width: 100%;
   z-index: 1;
   left: 0;
+  border-radius: 15px;
   top: 0;
   background: linear-gradient(to top, rgba(35, 35, 37, 0.9) 0, rgba(35, 35, 37, 0.7) 35%, rgba(22, 22, 23, 0) 60%, rgba(0, 0, 0, 0) 100%);
 }
@@ -15736,18 +15741,20 @@ Modal CSS
 }
 
 .video-background-content {
-  position: relative;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
   z-index: 2;
 }
 
 .video-background-overlay {
+  background-color: rgba(34, 49, 63, 0.4);
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: black;
-  opacity: 0.5;
   z-index: 1;
 }
 
@@ -15908,7 +15915,7 @@ Modal CSS
   transform: rotate(-90deg);
 }
 
-.slider-section .slide .content h2{
+.slider-section .slide .content h2 {
   color: white;
   text-transform: uppercase;
   font-size: 15px;
@@ -15920,11 +15927,130 @@ Modal CSS
   display: none;
   transition-delay: 0.3s
 }
-.dropdown-item.active, .dropdown-item:active,
-.dropdown-item:focus, .dropdown-item:hover{
+
+.dropdown-item.active,
+.dropdown-item:active,
+.dropdown-item:focus,
+.dropdown-item:hover {
   background-color: #82c5be;
   color: #fff;
 }
-.dropdown-item{
+
+.dropdown-item {
   padding: 8px 10px 10px !important;
+}
+
+.single-works-box,
+.single-works-box img,
+.works-overlay {
+  border-radius: 15px;
+}
+
+
+.testimonial-data img {
+  width: 70px;
+  max-height: 70px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 576px) {
+  .testimonial-data-inner {
+    display: flex;
+    width: 100%;
+    margin-inline: auto;
+    padding: 1em 0;
+    overflow: hidden;
+  }
+
+  .testimonial-data-item {
+    display: block;
+    margin-right: 0;
+    flex: 0 0 calc(100% / 2);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial-data-item {
+    display: block;
+    margin-right: 0;
+    flex: 0 0 calc(100% / 3);
+  }
+}
+
+.testimonial-data .card {
+  width: 100%;
+  border: 0;
+  border: 1px solid #ececec;
+}
+
+.data-content h5 {
+  font-weight: 500;
+  font-size: 17px;
+  text-transform: capitalize;
+}
+
+.data-content p {
+  font-size: 15px;
+}
+
+.data-content a.btn,
+.add-btn a {
+  font-size: 14px;
+  background: #82c5be;
+  border-color: #82c5be;
+  transition: 0.3s ease-in-out;
+}
+
+.data-content a.btn:hover,
+.add-btn a:hover {
+  background: transparent;
+  border-color: #82c5be;
+  color: #82c5be;
+}
+
+.ellips-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.download-section {
+  background-image: url(https://dummyimage.com/1400x400/ccc/fff);
+  background-size: cover;
+  padding: 80px 0 80px 0;
+  background-position: center;
+}
+
+.download-section h4,
+.download-section p,
+.breadcrumb-section h4,
+.breadcrumb-section p,
+.breadcrumb-section ol li a {
+  color: #fff;
+}
+
+.breadcrumb-section ol li.active{
+  color: #82c5be;
+}
+
+.download-section p {
+  font-size: 14px;
+}
+
+.breadcrumb-section {
+  background-image: url(https://dummyimage.com/1400x400/ccc/fff);
+  background-size: cover;
+  padding: 80px 0 80px 0;
+  background-position: center;
+}
+
+.breadcrumb-section h4{
+  font-size: 28px !important;
+}
+
+.breadcrumb-section p{
+  font-size: 12px;
 }
